fix: tierlist view
the styles it used forced it to black making it unreadable in light mode
it now relies more on bootstrap to render

it's using an "experimental" feature of bootstrap
it doesn't however interfare with its normal functions
but imo i would rather phase out the bootstrap grid system anyway

--- a/client/src/styles/customised-bootstrap/maps.scss
+++ b/client/src/styles/customised-bootstrap/maps.scss
@@ -123,7 +123,8 @@ $utilities: map-merge(
                         (
                             body: rgba(var(--#{$prefix}body-bg-rgb), var(--#{$prefix}border-opacity)),
                             body-secondary: rgba(var(--#{$prefix}secondary-bg-rgb), var(--#{$prefix}border-opacity)),
-                            body-tertiary: rgba(var(--#{$prefix}tertiary-bg-rgb), var(--#{$prefix}border-opacity))
+                            body-tertiary: rgba(var(--#{$prefix}tertiary-bg-rgb), var(--#{$prefix}border-opacity)),
+                            translucent: var(--#{$prefix}border-color-translucent),
                         )
                     )
             ),
@@ -199,6 +200,18 @@ $utilities: map-merge(
             property: overflow,
             responsive: true,
             values: auto hidden visible scroll
+        ),
+        "rows": (
+            property: --#{$prefix}rows,
+            class: g-rows,
+            responsive: true,
+            values: 1 2 3 4 5 6 7 8 9 10 11 12
+        ),
+        "cols": (
+            property: --#{$prefix}columns,
+            class: g-columns,
+            responsive: true,
+            values: 1 2 3 4 5 6 7 8 9 10 11 12
         )
     )
 );
