--- a/client/src/styles/customised-bootstrap/variables.scss
+++ b/client/src/styles/customised-bootstrap/variables.scss
@@ -370,7 +370,7 @@ $enable-reduced-motion: true !default;
 $enable-smooth-scroll: true !default;
 $enable-grid-classes: true !default;
 $enable-container-classes: true !default;
-$enable-cssgrid: false !default;
+$enable-cssgrid: true;
 $enable-button-pointers: true !default;
 $enable-rfs: true;
 $enable-validation-icons: true !default;
